# griff

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml  dgd_001_p0.chunk.json  dgd_001_p1.chunk.json  dgd_001_p2.chunk.json  dgd_001_p3.chunk.json  dgd_001_p4.chunk.json  dgd_001_p5.chunk.json  dgd_001_p6.chunk.json  dgd_001_p7.chunk.json  dgd_001_p8.chunk.json  flake.nix  rustfmt.toml
.claude/: settings.json
.github/workflows/: ci.yml  cockpit-pages.yml  (+3 more)
cli/: Cargo.toml
cli/examples/: analyze.rs  evidence_dump.rs  harmony_dump.rs  loss_scan.rs  register_scan.rs  tonal_scan.rs
cli/src/: curation_fs.rs  generation_input.rs  lib.rs  main.rs  rhythm_pattern.rs
cli/tests/: cli.rs  curate_cmd.rs  generate_corpus.rs  swang_cmd.rs
cli/tests/common/: mod.rs
cli/tests/fixtures/: multi_track.mid  seven_eight.mid  simple_4_4.mid  tempo_change.mid  two_phrases.mid
cli/tests/snapshots/: classify__multi_track.txt  classify__seven_eight.txt  classify__simple_4_4.txt  classify__tempo_change.txt  classify__two_phrases.txt  complement__multi_track.txt  complement__opts_counter_melody.txt  complement__seven_eight.txt  complement__simple_4_4.txt  complement__tempo_change.txt  complement__two_phrases.txt  error__complement_invalid_mode.txt  error__missing_file.txt  export__multi_track.txt  export__seven_eight.txt  export__simple_4_4.txt  export__tempo_change.txt  export__two_phrases.txt  generate__multi_track.txt  generate__rhythm_pattern.txt  generate__rhythm_pattern_ragged.txt  generate__seven_eight.txt  generate__simple_4_4.txt  generate__tempo_change.txt  generate__two_phrases.txt  import__multi_track.txt  import__seven_eight.txt  import__simple_4_4.txt  import__tempo_change.txt  import__two_phrases.txt  inspect__multi_track.txt  inspect__seven_eight.txt  inspect__simple_4_4.txt  inspect__tempo_change.txt  inspect__two_phrases.txt  phrases__multi_track.txt  phrases__seven_eight.txt  phrases__simple_4_4.txt  phrases__tempo_change.txt  phrases__two_phrases.txt  (+6 more)
cockpit/: .gitignore  Cargo.toml  README.md  build-web.sh
cockpit/src/: audio.rs  curation_io.rs  generation.rs  lib.rs  main.rs  swang.rs
cockpit/web/: index.html
cockpit/web-test/: .gitignore  README.md  cockpit.audio.test.js  cockpit.capture.test.js  cockpit.dock.test.js  cockpit.interaction.test.js  cockpit.load.test.js  cockpit.smoke.test.js  helpers.js  package-lock.json  package.json  serve.js
core/: Cargo.toml
core/src/: boundary.rs  candidate_chain.rs  classify.rs  closure.rs  complement.rs  corpus.rs  curation.rs  curation_store.rs  dump.rs  event.rs  feature.rs  feedback.rs  fretboard.rs  generate.rs  generation_input.rs  gesture.rs  gp.rs  graph.rs  harmony.rs  import.rs  ingest.rs  layered_path.rs  lib.rs  midi.rs  novelty.rs  pitch.rs  regen.rs  rerank.rs  score.rs  scoring.rs  semantic_diff.rs  similarity.rs  slice.rs  split.rs  structure.rs  syncopation.rs  technique.rs  tonal.rs  unfold.rs
core/tests/: characterization.rs  classify_canonical.rs  closure.rs  complement.rs  corpus_schema.rs  dump_golden.rs  exact_scalars.rs  explicit_rhythm.rs  feedback.rs  fretboard.rs  gesture.rs  gesture_control.rs  graph_layer.rs  harmony_tags.rs  import_dispatch.rs  normalized_diff.rs  normalized_projection_characterization.rs  novelty.rs  pitch_ladder.rs  position_assignment.rs  position_inference.rs  region_regen.rs  rerank.rs  rhythm_grid.rs  roundtrip.rs  rule_generator.rs  s6_chain_baseline.rs  score_props.rs  scoring.rs  semantic_diff.rs  semantic_diff_props.rs  semantic_equality_characterization.rs  shuffle_window.rs  similarity.rs  slice_extract.rs  strategy_selection.rs  structure.rs  structure_control.rs  syncopation.rs  technique_evidence.rs  (+6 more)
core/tests/common/: mod.rs
core/tests/fixtures/: minimal_chunk.json
core/tests/snapshots/: characterize__multi_track.txt  characterize__seven_eight.txt  characterize__simple_4_4.txt  characterize__tempo_change.txt  dump_golden__normalized_dump_golden.snap  generate__deterministic_7_8.txt  roundtrip__multi_track.txt  roundtrip__seven_eight.txt  roundtrip__simple_4_4.txt  roundtrip__tempo_change.txt
docs/: SPEC.md  decisions.log.md  fuzzing.md  glossary.md  preview-guide.md  process-backlog.md
fuzz/: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
fuzz/corpus/guitar_pro_import/: gp3_header_only.gp3  gp4_header_only.gp4  gp5_header_only.gp5
fuzz/corpus/midi_import/: hang_ppqn1_eighth.mid
fuzz/corpus/midi_roundtrip/: oom_tiny_ppqn_huge_delta.mid  panic_smpte_fps_min.mid  panic_smpte_second_header.mid  roundtrip_delta_exceeds_vlq.mid
fuzz/corpus/phrase_boundary/: slow_quadratic_cadence.mid
fuzz/corpus/score_projection/: valid_minimal.mid
fuzz/corpus/swang_parse/: reference.swg
fuzz/fuzz_targets/: complement_request.rs  generation_request.rs  gesture_request.rs  guitar_pro_import.rs  midi_import.rs  midi_roundtrip.rs  pattern_expansion.rs  phrase_boundary.rs  score_projection.rs  semantic_diff.rs  structure_metrics.rs  swang_parse.rs
pattern/: Cargo.toml
pattern/proptest-regressions/: lib.txt
pattern/src/: lib.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
preview/: Cargo.toml
preview/design/: index.html  tab.html
preview/src/: analysis.rs  curation.rs  lib.rs  main.rs  piano_roll.rs  render.rs  scene.rs  tui.rs  view.rs  viewport.rs
preview/src/golden/: acted_80x20.txt  initial_80x20.txt
preview/tests/: curation.rs  piano_roll.rs
swang/: Cargo.toml
swang/src/: eval.rs  lib.rs  pattern_compile.rs  syntax.rs
swang/tests/: score_text_inventory.rs
ui-core/: Cargo.toml
ui-core/src/: analysis.rs  capture.rs  corpus.rs  curation.rs  curation_session.rs  dock.rs  generate.rs  history.rs  lib.rs  playback.rs  scene.rs  theme.rs  view.rs  viewport.rs
ui-core/tests/: curation.rs
web/: Cargo.toml  README.md  build.sh  package.json
web/src/: lib.rs
web/static/: app.js  debuglog.js  idguard.js  index.html  modes.js  pager.js  phrasestats.js  style.css  tuning.js
web/test/: debuglog.test.js  idguard.test.js  modes.test.js  pager.test.js  phrasestats.test.js  tuning.test.js
(+87 files in other folders)
