[package]
name         = "griff-cli"
description  = "griff command-line interface"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[[bin]]
name = "griff"
path = "src/main.rs"

[dependencies]
griff-core = { path = "../core" }
clap       = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Used only by the S0 characterization suite to synthesise `.mid` fixtures
# directly, independent of griff's own export path.
midly = { workspace = true }

[lints]
workspace = true
