[package]
name         = "griff-cockpit"
description  = "egui cockpit for griff: a native + web Scene renderer over griff-ui-core (ADR-0027)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[[bin]]
name = "griff-cockpit"
path = "src/main.rs"

# `cdylib` emits the `.wasm` for `wasm-bindgen --target web` (the M2 web front,
# ADR-0027 Slice 2); `rlib` keeps the native bin and the unit tests linking the
# crate (the wasm-only cdylib pattern).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
griff-core    = { path = "../core" }
griff-ui-core = { path = "../ui-core" }
# The Swang authoring loop (S8): the cockpit drives the same evaluator the CLI
# does, never a `griff.exe` subprocess (ADR-0029). Pure + wasm-safe.
griff-swang   = { path = "../swang" }
# Serializes the captured `corpus::ChunkMeta` to chunk.json (ADR-0026), so the
# cockpit's output matches what `griff manifest` reads, and the provenance
# sidecar a kept candidate is stamped with (S8).
serde         = { workspace = true }
serde_json    = { workspace = true }
# Typed errors for the curation-store persistence adapter (3C-A), mirroring
# core's curation_store and the CLI's native adapter.
thiserror     = { workspace = true }

# Native desktop keeps eframe's defaults (winit + glow), exactly as Slice 1
# shipped; the web target picks a leaner, glow-only eframe below.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = "0.34"
# Native MIDI out for playback (S8 Slice 2): sends NoteOn/NoteOff/all-notes-off
# to a chosen output port. Linux uses ALSA (needs libasound2-dev at build).
midir = "0.10"

# Web (wasm32) — the canonical M2 front (ADR-0027 Slice 2). eframe paints via
# WebGL (`glow` over `web-sys`): ADR-0027 §5's "web renderer", no wgpu, no Trunk.
# The toolchain follows ADR-0025 — `wasm-bindgen --target web`
# with a version-pinned CLI (see `build-web.sh`), plus getrandom's `wasm_js`
# (Web Crypto) backend for the GP reader's `zip` subtree.
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow"] }
# Pinned exact: the `wasm-bindgen-cli` in `build-web.sh` must match this version
# (a version-matched CLI, ADR-0025 §4).
wasm-bindgen         = "=0.2.125"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
web-sys              = { version = "0.3", features = [
    "Blob", "Document", "Element", "HtmlAnchorElement", "HtmlCanvasElement", "Navigator",
    "Url", "Window", "console",
    # Web Audio — the cockpit's playback voice (`audio.rs`): a sustained sine
    # per sounding pitch. `BaseAudioContext` carries create_*/current_time/
    # destination; `AudioParam` the note-on/off envelopes.
    "AudioContext", "BaseAudioContext", "AudioNode", "AudioDestinationNode",
    "AudioParam", "GainNode", "OscillatorNode", "OscillatorType",
    # OPFS corpus persistence (ADR-0027 §3); the writable stream needs
    # `--cfg=web_sys_unstable_apis` (set in build-web.sh).
    "StorageManager", "FileSystemDirectoryHandle", "FileSystemFileHandle",
    "FileSystemWritableFileStream", "FileSystemGetDirectoryOptions", "FileSystemGetFileOptions",
] }
getrandom            = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
# Property-based fuzzing of the input -> reduce -> resolve -> paint loop.
proptest = { workspace = true }

[lints]
workspace = true
