[package]
name         = "griff-core"
description  = "Musical model, event types, slicing, features, and generation engine"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
midly      = { workspace = true }
thiserror  = { workspace = true }
guitarpro  = { version = "0.3", default-features = false }
serde      = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest   = { workspace = true }
insta      = "1"

[lints]
workspace = true
