[package]
name         = "griff-core"
description  = "Musical model, event types, slicing, features, and generation engine"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
midly      = { workspace = true }
thiserror  = { workspace = true }
guitarpro  = { version = "0.4", default-features = false, optional = true }
serde      = { workspace = true }
sha2       = "0.10"

[features]
default = ["gp"]
# Guitar Pro import. Pulls `guitarpro`/`zip` (and a `wasm-bindgen` subtree via
# `time`/`getrandom`); disable it (`default-features = false`) for lean,
# import-free wasm builds that only need MIDI — see ADR-0024.
gp = ["dep:guitarpro"]

[dev-dependencies]
serde_json = { workspace = true }
proptest   = { workspace = true }
insta      = "1"

[lints]
workspace = true
