[package]
name         = "griff-plugin"
description  = "griff CLAP plugin — intentionally empty until S10"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[lints]
workspace = true
