[package]
name         = "griff-preview"
description  = "Standalone preview: render a score as a piano-roll (S8)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[[bin]]
name = "griff-preview"
path = "src/main.rs"

[dependencies]
griff-core    = { path = "../core" }
# The renderer-agnostic UI core (view-model, interaction core, scene, curation),
# extracted per ADR-0016 so the egui frontend can share it without re-deriving
# layout or interaction logic.
griff-ui-core = { path = "../ui-core" }
# unstable-rendered-line-info: Paragraph::line_count, the post-wrap row
# count the inspector's scroll clamp needs (Codex P2, PR #41).
ratatui    = { version = "0.29", features = ["unstable-rendered-line-info"] }

[lints]
workspace = true
