[package]
name         = "griff-swang"
description  = "Swang lowering into the canonical model: pattern-to-rhythm, later the AST and parser (S16)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
griff-core    = { path = "../core", default-features = false }
griff-pattern = { path = "../pattern" }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
