[package]
name         = "griff-ui-core"
description  = "Renderer-agnostic UI core for griff previews: view-model, interaction core, scene, curation (ADR-0016)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
griff-core = { path = "../core" }
serde_json = { workspace = true }

[lints]
workspace = true
